--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "op-nhom1demo",
+  "name": "barebone",
   "main": "./lib/main",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "",
   "activationCommands": {
-    "atom-workspace": "op-nhom1demo:owo"
+    "atom-workspace": "barebone:owo"
   },
   "repository": "https://github.com/AcezukyRockon/op-nhom1demo",
   "engines": {
